Sun Mar 24 09:23:21 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqlodbc.c:
	- avoid dangerous casts

Tue Mar 20 16:24:26 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/gettimeofday.c src/apps/datacopy.c:
	- remove warning

Mon Mar 19 11:01:05 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/replacements.h: fix warning for win32

Sun Mar 18 12:37:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/odbc/unittests/timeout2.c:
	* src/odbc/unittests/timeout3.c:
	- fix cross-compile for win32

Sun Mar 18 12:09:57 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/Makefile.am 	src/apps/bsqlodbc.c src/apps/tsql.c:
	* src/apps/fisql/Makefile.am 	win32/winsetup.c:
	- fix cross-compile for win32

Fri Mar 16 16:32:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/Makefile.am src/tds/Makefile.am:
	- full libTDS privatization
	* src/server/unittest.c: use mnemonic

Wed Mar 14 17:18:23 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update
	* include/tdssrv.h src/pool/user.c src/server/login.c:
	* src/server/query.c src/server/server.c src/server/unittest.c:
	- update server stuff, at least login works
	* src/tds/tdsstring.c: fix possible mising NUL terminator
	* src/apps/tsql.c: fix wrong error handler result

Wed Mar 14 09:47:24 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html include/tds.h: update documentation

Tue Mar 13 17:24:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/pool/user.c src/server/login.c:
	* src/server/unittest.c src/tds/login.c src/tds/query.c:
	- use mnemonic for packet types

Tue Mar 13 16:45:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: added known tokens

Tue Mar 13 14:18:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: updated from code
