@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<!-- $Id: news.html,v 1.8 2005-05-26 04:57:50 jklowden Exp $ -->
+<!-- $Id: news.html,v 1.9 2007-03-26 08:05:42 freddy77 Exp $ -->
 <head>
 <title>FreeTDS.org</title>
 </head>
@@ -72,12 +72,12 @@ Includes a small but significant fix to token.c.  <a href="http://ibiblio.org/pu
 <br />
 In the year since the last release, FreeTDS has seen many improvements.  <a href="http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-0.62.tar.gz">Version 0.62</a> includes:
 <ul>
-<li>UTF-8 support, as well as most other client-side character sets
-<li> ODBC 3.0 compliance   
-<li> many new ODBC functions
-<li> cursors, array binding, dynamic SQL, and RPC support in ct-lib
-<li> improved network performance through better socket and packet handling.
-<li> more Win32 development choices; VMS support
+<li>UTF-8 support, as well as most other client-side character sets</li>
+<li>ODBC 3.0 compliance</li>
+<li>many new ODBC functions</li>
+<li>cursors, array binding, dynamic SQL, and RPC support in ct-lib</li>
+<li>improved network performance through better socket and packet handling.</li>
+<li>more Win32 development choices; VMS support</li>
 </ul>
 (11 Jan  2004)   
 <br />
@@ -114,10 +114,9 @@ This point release fixes some memory leaks.  (3 August 2003)
 <br />
 This point release offers bugfixes:
 	<ul>
-		<li>Segmentation fault with iODBC
-		<li>Segmentation fault opening log file in append mode
-		<li>binding parameters with NULL indicator
-		</li>
+		<li>Segmentation fault with iODBC</li>
+		<li>Segmentation fault opening log file in append mode</li>
+		<li>binding parameters with NULL indicator</li>
 	</ul>
 	(20 May 2003)   
 <br />
