@@ -1,3 +1,6 @@
+Mon Mar 26 10:05:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* doc/htdoc/news.html: validate page
+
 Sun Mar 24 09:23:21 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/apps/bsqlodbc.c:
 	- avoid dangerous casts
